--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -1,4 +1,5 @@
 import EditorMovie from "../../src/movies/editor/EditorMovie";
+import { EditorComposer } from "../../src/functional/EditorComposer";
 import { EDITOR_EXAMPLES } from "../../src/constants/EDITOR_EXAMPLES";
 
 # Migration from Swagger
@@ -71,17 +72,38 @@ Then, you can test the migrated NestJS Project, SDK library and Mockup Simulator
 {
   <ul>
     <li> Demo Editors
-      <ul>{
-        EDITOR_EXAMPLES.map(example => (
+      <ul>
+        {EDITOR_EXAMPLES.map((example) => (
           <li>
-            {example.title}: {" "}
-            <a href={example.nest} target="_blank">NestJS Project</a> /{" "}
-            <a href={example.sdk} target="_blank">SDK & Simulator</a> 
+            {example.title}{": "}
+            <a 
+              style={{ cursor: "pointer" }} 
+              onClick={() => {
+                EditorComposer.nest({
+                  title: example.title,
+                  swagger: example.swagger,
+                  e2e: true,
+                  simulate: true,
+                }).catch(() => {});
+              }}
+            > NestJS Project </a>
+            {" / "}
+            <a 
+              style={{ cursor: "pointer" }} 
+              onClick={() => {
+                EditorComposer.sdk({
+                  title: example.title,
+                  swagger: example.swagger,
+                  e2e: true,
+                  simulate: true,
+                }).catch(() => {});
+              }}
+            > SDK & Simulator </a>
           </li>
-      ))}
+        ))}
       </ul>
     </li>
   </ul>
 }
 
-[![Example Case](/images/editor/stackblitz.png)](https://stackblitz.com/edit/1g6adb?file=README.md&startScript=build:test,test)
+![Example Case](/images/editor/stackblitz.png)
