--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -334,12 +334,20 @@ export namespace INestiaConfig {
      * Decompose query DTO.
      *
      * If you configure this property to be `true`, the query DTO would be decomposed
-     * into individual query parameters per each property.
+     * into individual query parameters per each property. Otherwise you set it to be
+     * `false`, the query DTO would be one object type which contains all of query
+     * parameters.
      *
      * @default false
      */
     decompose?: boolean;
 
+    /**
+     * Operation ID generator.
+     *
+     * @param props Properties of the API endpoint.
+     * @returns Operation ID.
+     */
     operationId?(props: {
       class: string;
       function: string;
@@ -607,6 +615,122 @@ export default NESTIA_CONFIG;
 ```
   </Tab>
 </Tabs>
+
+Additionally, you can configure the `swagger` property in the `nestia.config.ts` file.
+
+  - `swagger.beautify`: Whether to beautify JSON content or not. 
+  - `swagger.info`: API information. If not configured, `package.json` content be utilized instead.
+  - `swagger.servers`: List of server addresses.
+  - `swagger.security`: Security schemes.
+  - `swagger.tags`: List of tag names with description.
+  - `swagger.decompose`: Whether to decompose query DTO as individual parameters.
+  - `swagger.operationId`: Operation ID genereator.
+
+<details>
+<summary> See detailed options: </summary>
+<br/>
+```typescript filename="INestiaConfig.ts" showLineNumbers {15-96}
+export namespace INestiaConfig {
+  /**
+   * Building `swagger.json` is also possible.
+   */
+  export interface ISwaggerConfig {
+    /**
+     * Output path of the `swagger.json`.
+     *
+     * If you've configured only directory, the file name would be the `swagger.json`.
+     * Otherwise you've configured the full path with file name and extension, the
+     * `swagger.json` file would be renamed to it.
+     */
+    output: string;
+
+    /**
+     * Whether to beautify JSON content or not.
+     *
+     * If you configure this property to be `true`, the `swagger.json` file would
+     * be beautified with indentation (2 spaces) and line breaks. If you configure
+     * numeric value instead, the indentation would be specified by the number.
+     *
+     * @default false
+     */
+    beautify?: boolean | number;
+
+    /**
+     * Whether to include additional information or not.
+     *
+     * If configured to be `true`, those properties would be added into each
+     * API endpoinnt.
+     *
+     * - `x-nestia-method`
+     * - `x-nestia-namespace`
+     * ` `x-nestia-jsDocTags`
+     *
+     * @default false
+     */
+    additional?: boolean;
+
+    /**
+     * API information.
+     *
+     * If omitted, `package.json` content would be used instead.
+     */
+    info?: Partial<OpenApi.IDocument.IInfo>;
+
+    /**
+     * List of server addresses.
+     */
+    servers?: OpenApi.IServer[];
+
+    /**
+     * Security schemes.
+     *
+     * When generating `swagger.json` file through `nestia`, if your controllers or
+     * theirs methods have a security key which is not enrolled in here property,
+     * it would be an error.
+     */
+    security?: Record<string, OpenApi.ISecurityScheme>;
+
+    /**
+     * List of tag names with description.
+     *
+     * It is possible to omit this property or skip some tag name even if
+     * the tag name is used in the API routes. In that case, the tag name
+     * would be used without description.
+     *
+     * Of course, if you've written a comment like `@tag {name} {descrition}`,
+     * you can entirely replace this property specification.
+     */
+    tags?: OpenApi.IDocument.ITag[];
+
+    /**
+     * Decompose query DTO.
+     *
+     * If you configure this property to be `true`, the query DTO would be decomposed
+     * into individual query parameters per each property. Otherwise you set it to be
+     * `false`, the query DTO would be one object type which contains all of query
+     * parameters.
+     *
+     * @default true
+     */
+    decompose?: boolean;
+
+    /**
+     * Operation ID generator.
+     *
+     * @param props Properties of the API endpoint.
+     * @returns Operation ID.
+     */
+    operationId?(props: {
+      class: string;
+      function: string;
+      method: "HEAD" | "GET" | "POST" | "PUT" | "PATCH" | "DELETE";
+      path: string;
+    }): string;
+  }
+}
+```
+
+</details>
 
 
 
