--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1528,7 +1528,7 @@ For reference, the custom property must be started with x- prefix. It's a rule o
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tab>
-```typescript copy filename="examples/src/json-schema-custom.ts" copy showLineNumbers {7-9, 16-18, 22-23}
+```typescript copy filename="examples/src/json-schema-custom.ts" copy showLineNumbers {7-9, 13, 17-18}
 import typia, { tags } from "typia";
  
 type Monetary<Value extends string> = tags.TagBase<{
@@ -1548,7 +1548,6 @@ interface IAccount {
   code: string & Placeholder<"Write you account code please">;
   balance: number & Monetary<"dollar">;
 };
- 
 typia.json.application<[IAccount]>();
 ```
   </Tab>
